# kotlin-rust

./: .gitignore  Cargo.toml  Makefile  README.md
kotlin/: Main.kt  Rust.kt
src/: lib.rs
